--- a/_data/world/2024/announcements.yml
+++ b/_data/world/2024/announcements.yml
@@ -1,1 +1,1 @@
-- content: 'Rails World is sold out. See you in Toronto Sept 26 & 27.'
+- content: 'The Rails World 2024 Opening Keynote with DHH is now online. Watch it <a href="https://youtu.be/-cEn_83zRFw?si=RbZUQb8dl3TVRVto">here</a>.'
