--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,10 +5,7 @@
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/jekyll:2-bookworm",
 	"features": {
-		"ghcr.io/devcontainers/features/github-cli:1": {},
-		"ghcr.io/rails/devcontainer/features/ruby:1": {
-			"version": "3.2.3"
-		}
+		"ghcr.io/devcontainers/features/github-cli:1": {}
 	}
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
