Update announcements.yml banner on Rails World page

--- a/_data/world/2024/announcements.yml
+++ b/_data/world/2024/announcements.yml
@@ -1,1 +1,1 @@
-- content: 'The Rails World 2024 Opening Keynote with DHH is now online. Watch it <a href="https://youtu.be/-cEn_83zRFw?si=RbZUQb8dl3TVRVto">here</a>.'
+- content: 'All Rails World 2024 talks are now online. Watch them all <a href="https://www.youtube.com/playlist?list=PLHFP2OPUpCeb182aDN5cKZTuyjn3Tdbqx">here</a>.'
