included the posts list in the our work section

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ world24_title: Rails World - 2024
 plugins:
   - jekyll-feed
   - jekyll-paginate
-  # - jekyll-redirect-from
+  - jekyll-redirect-from
   - jekyll-sitemap
   - jemoji
 
