Fix typos in various files

--- a/_data/world/2024/faq.yml
+++ b/_data/world/2024/faq.yml
@@ -53,7 +53,7 @@
         
         Most foreign nationals need a temporary resident visa (TRV) or an Electronic Travel Authorization (ETA) to travel to Canada. 
         
-        ETAs are easy and take minutes to request, however if you need a TRV, the process can be considerably longer. Registered attendees have recieved information about visas and requesting a letter of invitation in their ticket confirmation.
+        ETAs are easy and take minutes to request, however if you need a TRV, the process can be considerably longer. Registered attendees have received information about visas and requesting a letter of invitation in their ticket confirmation.
     
     - question: What is the refund policy?
       answer: |-
