Docs homepage, nav change, case study style (#373)
* New nav items

* Moving /blog to /news

* Placeholder for docs homepage

* Placeholder for events homepage

* Enabling global nav site wide

* Placeholder page for merch

* Merch placeholder page

* Nav highlighting

* Note about local dev redirect loop

* Active highlgith, nav global

* Initial build of the docs page

* Matching companies on homepage to bottom of docs

* Adding coming soon banner over case study card

* Grammar, spelling, and misc fixes from @robin850

* Moving /news back to /blog

* Home page improvement for vertical

* Using home page cards

* Updating docs to use look/feel of other site elements

* Guides layout for desktop & mobile

* Update doximity.html with new copy

* Corner ribbon removed from Doximity logo on front.

* Removing icon bars that were not used in final layout

* Removing merch page as URL goes to shopify site

* Most changes suggested by Amanda above

* Social graphic for Doximity Case Study

---------

Co-authored-by: Amanda Perino <58528404+AmandaPerino@users.noreply.github.com>

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,25 +1,25 @@
 items:
 
-  - title: Guides
-    url: https://guides.rubyonrails.org
-
-  - title: API
-    url: https://api.rubyonrails.org/
-
-  - title: Forum
-    url: https://discuss.rubyonrails.org
-
-  - title: Contribute
+  - title: Source
     url: https://github.com/rails/rails
 
-  - title: Foundation
-    url: /foundation
+  - title: Docs
+    url: /docs
 
-  - title: Team
+  - title: Community
     url: /community
 
-  - title: Blog
+  - title: News
     url: /blog
+
+  - title: Events
+    url: /world
 
   - title: Jobs
     url: https://jobs.rubyonrails.org
+
+  - title: Merch
+    url: https://merch.rubyonrails.org
+
+  - title: Foundation
+    url: /foundation
