--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ twitter: rails
 feed_path: /feed.xml
 world23_title: Rails World - 2023
 world24_title: Rails World - 2024
+world25_title: Rails World - 2025
 
 plugins:
   - jekyll-feed
