Foundation Member pages (#462)
* Initial stab for testing, no style

* Full page company layout and first group working

* Mobile css

* Initial companies populated

* Linking ready companies from foundation page

* truncation of overflow text on certain elements

* Update bigbinary.md

Removing a space, since BigBinary is one word.

* Updating makandra wiht new content, linking from foundation page

---------

Co-authored-by: Amanda Perino <58528404+AmandaPerino@users.noreply.github.com>

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,9 @@ collections:
   case_studies:
     output: true
     permalink: "/docs/case-studies/:path"
+  companies:
+    output: true
+    permalink: "/foundation/:path"
   pages:
     output: true
     permalink: "/:name"
