implement feedback on homepage

--- a/_data/world/2025/announcements.yml
+++ b/_data/world/2025/announcements.yml
@@ -1,1 +1,1 @@
-- content: "Join Rails World 2025, Ticket sales starting soon!"
+- content: "Join Rails World 2025.<br class='mobile-break'> Ticket sales starting soon!"
