front end adjustments

--- a/_data/world/2025/announcements.yml
+++ b/_data/world/2025/announcements.yml
@@ -1,1 +1,1 @@
-- content: "Join Rails World 2025.<br class='mobile-break'> Ticket sales starting soon!"
+- content: "General ticket sale starting on May 13th"
